--- a/AeroVendas.ULF.Cliente/wwwroot/index.html
+++ b/AeroVendas.ULF.Cliente/wwwroot/index.html
@@ -5,8 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title>AeroVendas.ULF.Cliente</title>
-    <base href="/" />
-    <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
+    <link href="css/bootstrap/bootstrap-icons.css" rel="stylesheet" />
     <link href="css/app.css" rel="stylesheet" />
     <link href="AeroVendas.ULF.Cliente.styles.css" rel="stylesheet" />
 </head>
