--- a/AeroVendas.ULF.Cliente/wwwroot/index.html
+++ b/AeroVendas.ULF.Cliente/wwwroot/index.html
@@ -5,13 +5,18 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title>Aero Vendas</title>
+    <base href="/" />
 
+    <link href="_content/Blazored.Toast/blazored-toast.min.css" rel="stylesheet" />
     <link href="css/app.css" rel="stylesheet" />
     <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
     <link href="css/bootstrap/bootstrap-icons.css" rel="stylesheet" />
-    <link href="AeroVendas.ULF.Cliente.styles.css" rel="stylesheet" />
-    <link href="_content/Blazored.Toast/blazored-toast.min.css" rel="stylesheet" />
     <link href="_content/AeroVendas.ULF.Cliente.Toastr/toastr.min.css" rel="stylesheet" />
+    <link href="_content/Blazored.Toast/blazored-toast.min.css" rel="stylesheet" />
+    <link href="AeroVendas.ULF.Cliente.styles.css" rel="stylesheet" />
+    <script src="_content/TinyMCE.Blazor/tinymce-blazor.js" no-api-key></script>
+    
+
 </head>
 
 <body>
@@ -32,6 +37,25 @@
     <script src="_content/AeroVendas.ULF.Cliente.Toastr/jquery-3.5.1.min.js"></script>
     <script src="_content/AeroVendas.ULF.Cliente.Toastr/toastr.min.js"></script>
     <script src="_content/AeroVendas.ULF.Cliente.Toastr/toastrWrapper.js"></script>
+    <script src="https://cdn.tiny.cloud/1/fzx94ksz5pf42cvc074lz2yikzw5x780fg8y6501jwkwoat0/tinymce/5/tinymce.min.js" referrerpolicy="origin"></script>
+    </script>
+    <script>
+        tinymce.init({
+            selector: 'textarea#basic-example',
+            height: 500,
+            plugins: [
+                'advlist', 'autolink', 'lists', 'link', 'image', 'charmap', 'preview',
+                'anchor', 'searchreplace', 'visualblocks', 'code', 'fullscreen',
+                'insertdatetime', 'media', 'table', 'help', 'wordcount'
+            ],
+            toolbar: 'undo redo | blocks | ' +
+                'bold italic backcolor | alignleft aligncenter ' +
+                'alignright alignjustify | bullist numlist outdent indent | ' +
+                'removeformat | help',
+            content_style: 'body { font-family:Helvetica,Arial,sans-serif; font-size:16px }'
+        });
+
+    </script>   
 </body>
 
 </html>
