--- a/AeroVendas.ULF.Cliente/wwwroot/index.html
+++ b/AeroVendas.ULF.Cliente/wwwroot/index.html
@@ -15,7 +15,7 @@
     <link href="_content/AeroVendas.ULF.Cliente.Toastr/toastr.min.css" rel="stylesheet" />
     <link href="AeroVendas.ULF.Cliente.styles.css" rel="stylesheet" />
     <!--<script src="_content/TinyMCE.Blazor/tinymce-blazor.js" no-api-key></script>-->
-    <script src="scritps/iconify-icon.min.js"></script>
+    <!--<script src="https://cdn.jsdelivr.net/npm/iconify-icon@1.0.7/dist/iconify-icon.min.js"></script>-->
     <script src="_framework/blazor.server.js"></script>
     <script src="_content/TinyMCE.Blazor/tinymce-blazor.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tinymce/4.9.2/tinymce.min.js" referrerpolicy="origin"></script>
@@ -35,17 +35,17 @@
 
 
     <script src="_framework/blazor.webassembly.js"></script>
+    <script src="scripts/iconify-icon.min.js"></script> 
     <script src="scripts/jsExamples2.js"></script>
-    <script src="_content/AeroVendas.ULF.Cliente.Toastr/jquery-3.5.1.min.js"></script>
     <script src="_content/AeroVendas.ULF.Cliente.Toastr/jquery-3.5.1.min.js"></script>
     <script src="_content/AeroVendas.ULF.Cliente.Toastr/toastr.min.js"></script>
     <script src="_content/AeroVendas.ULF.Cliente.Toastr/toastrWrapper.js"></script>
-    <script src="_content/AeroVendas.ULF.Cliente.Toastr/iconify-icon.min.js"></script>
 
-    
+
+
     <!--<script src="https://cdn.tiny.cloud/1/fzx94ksz5pf42cvc074lz2yikzw5x780fg8y6501jwkwoat0/tinymce/5/tinymce.min.js" referrerpolicy="origin"></script>
-    </script>
+        </script>
 
-</body>
+    </body>
 
-</html>
+    </html>
